Pseudo implementação do primeiro caso de uso

--- a/Keepit-Web/src/main/webapp/index.html
+++ b/Keepit-Web/src/main/webapp/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <a href="formulario-receita-incomum.xhtml">Adicionar receita incomum</a>
     </body>
 </html>
