--- a/Keepit-Web/src/main/webapp/login.xhtml
+++ b/Keepit-Web/src/main/webapp/login.xhtml
@@ -5,18 +5,12 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Keepit</title>
+        <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <h1>Bem vindo ao Keepit!</h1>
-        <hr/>
-        <h:panelGrid>
-            <h:button value="Login" outcome="login" />
-            <h:button value="Cadastro" outcome="cadastro" />
-        </h:panelGrid>
+        <div>TODO write content</div>
     </body>
 </html>
