--- a/Keepit-Web/src/main/webapp/cadastro.xhtml
+++ b/Keepit-Web/src/main/webapp/cadastro.xhtml
@@ -13,6 +13,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
+        <p><h:link value="Home" outcome="index"/> > Cadastro</p>
         <h1>Cadastro</h1>
         <hr/>
         <f:view>
