--- a/Keepit-Web/src/main/webapp/restrito/logado.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/logado.xhtml
@@ -17,7 +17,7 @@ and open the template in the editor.
         <hr/>
         <h3>Olá, #{controladorLogin.usuario.nome}</h3>
         <h:form>
-            <h:commandButton id="submit" value="Logout" actionListener="#{controladorUsuario.logout()}" action="login"/>
+            <h:commandButton id="submit" value="Logout" actionListener="#{controladorLogin.logout()}" action="/login.xhtml?faces-redirect=true"/>
         </h:form>
     </body>
 </html>
