--- a/Keepit-Web/src/main/webapp/restrito/formulario-despesa-incomum.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-despesa-incomum.xhtml
@@ -5,12 +5,41 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <head>
-        <title>TODO supply a title</title>
+        <title>Formulário Despesa Incomum</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <p><h:link value="Inicio" outcome="logado"/> > Adicionar despesa incomum</p>
+        <hr/>
+        <h3>Despesa incomum</h3>
+        <h:form>
+            <h:panelGrid columns="2">
+                <h:outputLabel value="Titulo da despesa " />
+                <h:inputText value="#{controladorDespesaIncomum.despesaIncomum.titulo}" required="true" autocomplete="true"></h:inputText>
+                <h:outputLabel value="Valor " />
+                <h:inputText value="#{controladorDespesaIncomum.despesaIncomum.valor}" required="true" autocomplete="true"></h:inputText>
+                <h:outputLabel value="Data " />
+                <p:calendar value="#{controladorDespesaIncomum.despesaIncomum.data}" />
+                <h:outputLabel value="Destino da despesa (por exemplo: loja que receberá o dinheiro) " />
+                <h:inputText value="#{controladorDespesaIncomum.despesaIncomum.destino}" required="true" autocomplete="true"></h:inputText>
+                <h:commandButton id="submit" value="Adicionar" actionListener="#{controladorDespesaIncomum.criarDespesaIncomum()}"/>
+            </h:panelGrid>
+        </h:form>
+        <hr/>
+        <h:dataTable value="#{controladorDespesaIncomum.despesasIncomuns}" var="row">
+            <h:column><b>Título da despesa incomum </b>#{row.titulo}</h:column>
+            <h:column><b>Valor </b>R$ #{row.valor}</h:column>
+            <h:column>
+                <h:form>
+                    <h:commandButton actionListener="#{controladorDespesaIncomum.removerDespesaIncomum(row)}" value="Remover" />
+                    <h:commandButton actionListener="#{controladorDespesaIncomum.setDespesaIncomum(row)}" action="despesa-incomum" value="Detalhes" />
+                </h:form>
+            </h:column>
+        </h:dataTable>
     </body>
 </html>
