--- a/Keepit-Web/src/main/webapp/index.xhtml
+++ b/Keepit-Web/src/main/webapp/index.xhtml
@@ -7,10 +7,10 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <head>
+    <h:head>
         <title>Keepit</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    </h:head>
     <body>
         <h1>Bem vindo ao Keepit!</h1>
         <hr/>
