--- a/Keepit-Web/src/main/webapp/login.xhtml
+++ b/Keepit-Web/src/main/webapp/login.xhtml
@@ -8,10 +8,10 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
       
-    <head>
+    <h:head>
         <title>Keepit</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    </h:head>
     <body>
         <p><h:link value="Home" outcome="index"/> > Login</p>
         <hr/>
