--- a/Keepit-Web/src/main/webapp/restrito/formulario-despesa-estimada.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-despesa-estimada.xhtml
@@ -9,20 +9,21 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-    <head>
+    <h:head>
         <title>Formulário Despesa Estimada</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    </h:head>
     <body>
         <p><h:link value="Inicio" outcome="logado"/> > Adicionar despesa estimada</p>
         <hr/>
         <h3>Despesa estimada</h3>
         <h:form>
+            <p:messages id="message" />
             <h:panelGrid columns="2">
                 <h:outputLabel value="Titulo da despesa " />
-                <h:inputText value="#{controladorDespesaEstimada.despesaEstimada.titulo}" required="true" autocomplete="true"></h:inputText>
+                <p:inputText value="#{controladorDespesaEstimada.despesaEstimada.titulo}" required="true" autocomplete="true" />
                 <h:outputLabel value="Valor " />
-                <h:inputText value="#{controladorDespesaEstimada.despesaEstimada.valor}" required="true" autocomplete="true"></h:inputText>
+                <p:inputNumber decimalPlaces="2" value="#{controladorDespesaEstimada.despesaEstimada.valor}" required="true" autocomplete="true" />
                 <h:outputLabel value="Data " />
                 <p:calendar value="#{controladorDespesaEstimada.despesaEstimada.data}" />
                 <h:commandButton id="submit" value="Adicionar" actionListener="#{controladorDespesaEstimada.criarDespesaEstimada()}"/>
