--- a/Keepit-Web/src/main/webapp/restrito/formulario-despesa-incomum.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-despesa-incomum.xhtml
@@ -9,24 +9,25 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-    <head>
+    <h:head>
         <title>Formulário Despesa Incomum</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    </h:head>
     <body>
         <p><h:link value="Inicio" outcome="logado"/> > Adicionar despesa incomum</p>
         <hr/>
         <h3>Despesa incomum</h3>
         <h:form>
+            <p:messages id="message" />
             <h:panelGrid columns="2">
                 <h:outputLabel value="Titulo da despesa " />
-                <h:inputText value="#{controladorDespesaIncomum.despesaIncomum.titulo}" required="true" autocomplete="true"></h:inputText>
+                <p:inputText value="#{controladorDespesaIncomum.despesaIncomum.titulo}" required="true" autocomplete="true" />
                 <h:outputLabel value="Valor " />
-                <h:inputText value="#{controladorDespesaIncomum.despesaIncomum.valor}" required="true" autocomplete="true"></h:inputText>
+                <p:inputNumber decimalPlaces="2" value="#{controladorDespesaIncomum.despesaIncomum.valor}" required="true" autocomplete="true" />
                 <h:outputLabel value="Data " />
                 <p:calendar value="#{controladorDespesaIncomum.despesaIncomum.data}" />
                 <h:outputLabel value="Destino da despesa (por exemplo: loja que receberá o dinheiro) " />
-                <h:inputText value="#{controladorDespesaIncomum.despesaIncomum.destino}" required="true" autocomplete="true"></h:inputText>
+                <p:inputText value="#{controladorDespesaIncomum.despesaIncomum.destino}" required="true" autocomplete="true" />
                 <h:commandButton id="submit" value="Adicionar" actionListener="#{controladorDespesaIncomum.criarDespesaIncomum()}"/>
             </h:panelGrid>
         </h:form>
