--- a/Keepit-Web/src/main/webapp/restrito/formulario-receita-comum.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-receita-comum.xhtml
@@ -9,24 +9,25 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-    <head>
+    <h:head>
         <title>Formulário Receita Comum</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    </h:head>
     <body>
         <p><h:link value="Inicio" outcome="logado"/> > Adicionar receita comum</p>
         <hr/>
         <h3>Receita comum</h3>
         <h:form>
+            <p:messages id="message" />
             <h:panelGrid columns="2">
                 <h:outputLabel value="Titulo da despesa " />
-                <h:inputText value="#{controladorReceitaComum.receitaComum.titulo}" required="true" autocomplete="true"></h:inputText>
+                <p:inputText value="#{controladorReceitaComum.receitaComum.titulo}" required="true" autocomplete="true" />
                 <h:outputLabel value="Valor " />
-                <h:inputText value="#{controladorReceitaComum.receitaComum.valor}" required="true" autocomplete="true"></h:inputText>
+                <p:inputNumber decimalPlaces="2" value="#{controladorReceitaComum.receitaComum.valor}" required="true" autocomplete="true" />
                 <h:outputLabel value="Dia do mês " />
-                <h:inputText value="#{controladorReceitaComum.receitaComum.diaDoMes}" required="true" autocomplete="true" />
+                <p:inputNumber decimalPlaces="0" value="#{controladorReceitaComum.receitaComum.diaDoMes}" required="true" autocomplete="true" />
                 <h:outputLabel value="Atualizar automaticamente?" />
-                <h:selectBooleanCheckbox value="#{controladorReceitaComum.receitaComum.automatica}" />
+                <p:selectBooleanCheckbox value="#{controladorReceitaComum.receitaComum.automatica}" />
                 <h:commandButton id="submit" value="Adicionar" actionListener="#{controladorReceitaComum.criarReceitaComum()}"/>
             </h:panelGrid>
         </h:form>
