--- a/Keepit-Web/src/main/webapp/restrito/formulario-receita-incomum.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-receita-incomum.xhtml
@@ -9,26 +9,27 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-    <head>
+    <h:head>
         <title>Formulário Receita Incomum</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+    </h:head>
     <body>
         <p><h:link value="Inicio" outcome="logado"/> > Adicionar receita incomum</p>
         <hr/>
         <h3>Receita incomum</h3>
         <h:form>
+            <p:messages id="message" />
             <h:panelGrid columns="2">
                 <h:outputLabel value="Titulo da despesa " />
-                <h:inputText value="#{controladorReceitaIncomum.receitaIncomum.titulo}" required="true" autocomplete="true"></h:inputText>
+                <p:inputText value="#{controladorReceitaIncomum.receitaIncomum.titulo}" required="true" autocomplete="true" />
                 <h:outputLabel value="Valor " />
-                <h:inputText value="#{controladorReceitaIncomum.receitaIncomum.valor}" required="true" autocomplete="true"></h:inputText>
+                <p:inputNumber decimalPlaces="2" value="#{controladorReceitaIncomum.receitaIncomum.valor}" required="true" autocomplete="true" />
                 <h:outputLabel value="Data " />
                 <p:calendar value="#{controladorReceitaIncomum.receitaIncomum.data}" />
                 <h:outputLabel value="Motivo " />
-                <h:inputText value="#{controladorReceitaIncomum.receitaIncomum.motivo}" required="true" autocomplete="true"></h:inputText>
+                <p:inputText value="#{controladorReceitaIncomum.receitaIncomum.motivo}" required="true" autocomplete="true" />
                 <h:outputLabel value="Emissor " />
-                <h:inputText value="#{controladorReceitaIncomum.receitaIncomum.emissor}" required="true" autocomplete="true"></h:inputText>
+                <p:inputText value="#{controladorReceitaIncomum.receitaIncomum.emissor}" required="true" autocomplete="true" />
                 <h:commandButton id="submit" value="Adicionar" actionListener="#{controladorReceitaIncomum.criarReceitaIncomum()}"/>
             </h:panelGrid>
         </h:form>
