--- a/Keepit-Web/src/main/webapp/restrito/formulario-despesa-comum.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-despesa-comum.xhtml
@@ -37,8 +37,13 @@ and open the template in the editor.
             <h:column><b>Valor </b>R$ #{row.valor}</h:column>
             <h:column>
                 <h:form>
-                    <h:commandButton actionListener="#{controladorDespesaComum.removerDespesaComum(row)}" value="Remover" />
-                    <h:commandButton actionListener="#{controladorDespesaComum.setDespesaComum(row)}" action="receita-incomum" value="Detalhes" />
+                    <h:panelGrid columns="2">
+                        <h:commandButton actionListener="#{controladorDespesaComum.removerDespesaComum(row)}" value="Remover" />
+                        <h:outputLabel rendered="#{row.automatica and row.data != null}" value="Última atualização: #{row.data.toString()}" />
+                        <h:outputLabel rendered="#{row.automatica and row.data eq null}" value="Será aplicada somente próximo dia #{row.diaDoMes}" />
+                        <h:commandButton rendered="#{not row.automatica and controladorDespesaComum.estaAtrasada(row)}" actionListener="#{controladorDespesaComum.atualizarDespesaComum(row)}" value="Atualizar!" />
+                        <h:outputLabel rendered="#{not row.automatica and not controladorDespesaComum.estaAtrasada(row)}" value="Já está atualizada!" />
+                    </h:panelGrid>
                 </h:form>
             </h:column>
         </h:dataTable>
