Fixed copy/paste mistakes

--- a/Keepit-Web/src/main/webapp/restrito/formulario-despesa-comum.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-despesa-comum.xhtml
@@ -33,7 +33,7 @@ and open the template in the editor.
         </h:form>
         <hr/>
         <h:dataTable value="#{controladorDespesaComum.despesasComuns}" var="row">
-            <h:column><b>Título da receita incomum </b>#{row.titulo}</h:column>
+            <h:column><b>Título da despesa comum </b>#{row.titulo}</h:column>
             <h:column><b>Valor </b>R$ #{row.valor}</h:column>
             <h:column>
                 <h:form>
