--- a/Keepit-Web/src/main/webapp/restrito/formulario-receita-comum.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-receita-comum.xhtml
@@ -20,7 +20,7 @@ and open the template in the editor.
         <h:form>
             <p:messages id="message" />
             <h:panelGrid columns="2">
-                <h:outputLabel value="Titulo da despesa " />
+                <h:outputLabel value="Titulo da receita " />
                 <p:inputText value="#{controladorReceitaComum.receitaComum.titulo}" required="true" autocomplete="true" />
                 <h:outputLabel value="Valor " />
                 <p:inputNumber decimalPlaces="2" value="#{controladorReceitaComum.receitaComum.valor}" required="true" autocomplete="true" />
