resolvendo bugs de receita e despesa comum

--- a/Keepit-Web/src/main/webapp/restrito/formulario-despesa-comum.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-despesa-comum.xhtml
@@ -35,12 +35,13 @@ and open the template in the editor.
         <h:dataTable value="#{controladorDespesaComum.despesasComuns}" var="row">
             <h:column><b>Título da receita incomum </b>#{row.titulo}</h:column>
             <h:column><b>Valor </b>R$ #{row.valor}</h:column>
+            <h:column><b>Dia de debitar </b>#{row.diaDoMes}</h:column>
             <h:column>
                 <h:form>
                     <h:panelGrid columns="2">
                         <h:commandButton actionListener="#{controladorDespesaComum.removerDespesaComum(row)}" value="Remover" />
-                        <h:outputLabel rendered="#{row.automatica and row.data != null}" value="Última atualização: #{row.data.toString()}" />
-                        <h:outputLabel rendered="#{row.automatica and row.data eq null}" value="Será aplicada somente próximo dia #{row.diaDoMes}" />
+                        <h:outputLabel rendered="#{row.automatica and row.ultimaAtualizacao != null}" value="Última atualização: #{row.ultimaAtualizacao.toString()}" />
+                        <h:outputLabel rendered="#{row.automatica and row.ultimaAtualizacao eq null}" value="Será aplicada somente próximo dia #{row.diaDoMes}" />
                         <h:commandButton rendered="#{not row.automatica and controladorDespesaComum.estaAtrasada(row)}" actionListener="#{controladorDespesaComum.atualizarDespesaComum(row)}" value="Atualizar!" />
                         <h:outputLabel rendered="#{not row.automatica and not controladorDespesaComum.estaAtrasada(row)}" value="Já está atualizada!" />
                     </h:panelGrid>
