--- a/Keepit-Web/src/main/webapp/restrito/logado.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/logado.xhtml
@@ -9,7 +9,7 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
+    
     <h:head>
         <title>Keepit</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -25,7 +25,9 @@ and open the template in the editor.
         <p:outputLabel rendered="#{controladorLogin.usuario.saldo eq 0}" style="color: black" value="R$ #{controladorLogin.usuario.saldo}" />
         <p:outputLabel rendered="#{controladorLogin.usuario.saldo gt 0}" style="color: green" value="R$ #{controladorLogin.usuario.saldo}" />
         <p:outputLabel rendered="#{controladorLogin.usuario.saldo lt 0}" style="color: red" value="R$ #{controladorLogin.usuario.saldo}" />
-        <p:messages id="messages" />
+        <p:messages id="messages" /><br></br>
+        <p:outputLabel value="A média das despesas de usuários de sua classe social é R$#{comparadorUsuario.mediaDasDespesasDeTodosUsuariosNosUltimos30Dias()}" />
+        <p:chart type="line" model="#{comparadorUsuario.lineModel}" style="height:300px;width:80%"/>
         <hr/>
         <h:panelGrid columns="2">
             <h:button value="Adicionar receita incomum" outcome="formulario-receita-incomum" />
