--- a/Keepit-Web/src/main/webapp/restrito/formulario-despesa-estimada.xhtml
+++ b/Keepit-Web/src/main/webapp/restrito/formulario-despesa-estimada.xhtml
@@ -35,8 +35,11 @@ and open the template in the editor.
             <h:column><b>Valor </b>R$ #{row.valor}</h:column>
             <h:column>
                 <h:form>
-                    <h:commandButton actionListener="#{controladorDespesaEstimada.removerDespesaEstimada(row)}" value="Remover" />
-                    <h:commandButton actionListener="#{controladorDespesaEstimada.setDespesaEstimada(row)}" action="despesa-estimada" value="Detalhes" />
+                    <h:commandButton rendered="#{row.confirmada}" actionListener="#{controladorDespesaEstimada.removerDespesaEstimada(row)}" value="Remover" />
+                    <h:commandButton actionListener="#{controladorDespesaEstimada.cancelarDespesaEstimada(row)}" value="Cancelar e remover" />
+                    <h:commandButton rendered="#{controladorDespesaEstimada.estaAtrasada(row) and not row.confirmada}" actionListener="#{controladorDespesaEstimada.confirmarDespesaEstimada(row)}" value="Confirmar despesa estimada" />
+                    <h:outputLabel rendered="#{not controladorDespesaEstimada.estaAtrasada(row)}" value="Prevista para dia #{row.data.toString()}" />
+                    <h:outputLabel rendered="#{row.confirmada}" value="Despesa estimada confirmada!" />
                 </h:form>
             </h:column>
         </h:dataTable>
